# loftytest

./: .dockerignore  .gitignore  .replit  Dockerfile  Dockerfile.cpu  README.md  deploy.bat  deploy.sh  docker-compose.cpu.yml  docker-compose.farm.yml  docker-compose.gpu.yml  docker-compose.yml  dump.rdb  pyproject.toml  replit.md  requirements.txt  setup.sh  start.sh  start_docker.sh
api/: main.py
attached_assets/: Pasted--REPLIT-senior-Python-ML--1771597171682_1771597171682.txt
core/: celery_app.py  config.py  models.py
tasks/: generation_tasks.py
tests/: conftest.py  test_endpoints.py  test_helpers.py  test_validation.py
