[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.6.2",
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "redis>=6.4.0",
    "uvicorn[standard]>=0.41.0",
]
