[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acestep-music-api"
version = "1.0.0"
description = "REST API service for music generation using ACE-Step 1.5 model"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "celery[redis]>=5.6.0",
    "redis>=6.2.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "python-multipart>=0.0.20",
    "soundfile>=0.13.1",
    "ace-step @ git+https://github.com/ace-step/ACE-Step-1.5.git",
]

[tool.setuptools]
py-modules = []
